# mindspark

./: .gitignore  README.md  asset-manifest.json  index.html
assets/js/: auth.js
backend/: pyproject.toml  requirements.txt
backend/src/: manage.py
backend/src/mindspark_api/: asgi.py  config_dev.py  settings.py  urls.py  wsgi.py
backend/src/user/: admin.py  models.py  serializer.py  urls.py  utils.py  views.py
backend/src/user/api/: serializer.py  urls.py  views.py
backend/src/user/migrations/: 0001_initial.py  0002_auto_20210306_0226.py  0002_auto_20221202_0623.py  0003_user_auth_img.py  0004_auto_20210306_1458.py  0005_remove_persondetail_isverified.py  0006_auto_20210306_2006.py
backend/src/user/templates/user/: index.html
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  store.js
frontend/src/actions/: user.js
frontend/src/components/: FooterComponent.js  Header.js  (+2 more)
static/css/: main.97b7fe9b.chunk.css  main.97b7fe9b.chunk.css.map
static/js/: 2.39cf4090.chunk.js  2.39cf4090.chunk.js.map  2.6c1b736d.chunk.js  2.6c1b736d.chunk.js.map  2.e655377f.chunk.js  2.e655377f.chunk.js.map  main.2be72eb1.chunk.js  main.2be72eb1.chunk.js.map  main.31f46c24.chunk.js  main.31f46c24.chunk.js.map  main.3ee1340b.chunk.js  main.3ee1340b.chunk.js.map  main.73db6081.chunk.js  main.73db6081.chunk.js.map  main.9d73b12e.chunk.js  main.9d73b12e.chunk.js.map  main.ec20b028.chunk.js  main.ec20b028.chunk.js.map  runtime-main.d17aa88c.js  runtime-main.d17aa88c.js.map  runtime-main.f7332ac2.js  runtime-main.f7332ac2.js.map
(+24 files in other folders)
