[tool.poetry]
name = "mindspark"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "UNLICENSE"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
opencv-python = "^4.5.1"
face-recognition = "^1.3.0"
psycopg2 = "^2.8.6"
djangorestframework = "^3.12.2"
djangorestframework-simplejwt = "^4.6.0"
django-cors-headers = "^3.7.0"
selenium = "^3.141.0"
google-auth = "^1.27.1"
django-allauth = "^0.44.0"
Pillow = "^8.1.2"
cmake = "^3.18.4"
django-filter = "^2.4.0"
channels = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
